# myVerlet

./: .gitignore  CMakeLists.txt  README.md  main.cpp
modules/: Vector.h
src/: Game.h  Level.h  consts.h  main.cpp
src/AtomWorld/: AtomWorld.h  Bullet.h  Player.h  VerletObject.h  VerletObject2.h  VerletObjectCollisionHandled.h
src/Camera/: Camera.h
src/Engine/: AtomWorld.h  BaseGame.h  BaseLevel.h  BaseObject.h  BaseStick.h  Benchmark.h  Camera.h  DebugGraphics.h  EngineConsts.cpp  EngineConsts.h  EventBus.h  EventHandler.h  Game.h  Graphics.h  InputHandler.h  PerformanceMonitor.h  Physics.h  Scene.h  SoundManager.h  TimerManager.h  VerletObject.h
src/Engine/BaseObject/: BaseObject.cpp  BaseObject.h
src/Engine/CallbackSystems/: EventBus.h  InputHandler.cpp  InputHandler.h
src/Engine/EventBus/: BaseEvent.h  EBHandle.cpp  EBHandle.h  EventBus.h  EventBusImpl.h
src/Engine/InputBus/: IBHandle.cpp  IBHandle.h  InputBus.cpp  InputBus.h  InputBusImpl.h
src/Engine/Modules/: CameraControls.h  CameraFollowing.h  ExplosionHandler.h  RandomPositionGenerator.h  Shooter.h
src/Engine/Modules/PerformanceTest/: Drawing.h  EmptyObject.h  EmptyStick.h  PerformanceTest.h
src/Engine/Scene/: ObjectStorage.h  Scene.h  StickStorage.h
src/Engine/Scene/BaseObject/: BaseObject.cpp  BaseObject.h
src/Engine/Scene/BaseStick/: BaseStick.h  BasicStickDetails.h
src/Engine/SoundManager/: SMHandle.cpp  SMHandle.h  SoundManager.h  SoundManagerImpl.h
src/Engine/TimerManager/: TMHandle.cpp  TMHandle.h  TimerManager.h  TimerManagerImpl.h
src/Engine/utils/: Angle.h  Grid.h  Rand.h  Rectangle.h  SparseSet.h  ThreadPool.h  ThreadsTest.h  Vector.h
src/Game/: Game.h
src/GameTest/: Events.h  Game.h  MainMenu.txt  UiRenderer.h  bullet.txt
src/GameTest/Entities/: Boid.h  Bullet.cpp  Bullet.h  EmptyObject.h  Enemy.h  Food.h  IDamageable.h  Player.h  Predator.h
src/GameTest/Entities/Interfaces/: IDamageable.h  IPredator.h  IPrey.h
src/GameTest/Levels/: BoidsBlackboard.h  CameraControls.h  Level1.h  MainMenu.h  Move.h  PerformanceTest.h
src/GameTest/Levels/PerformanceTest/: EmptyObject.h  PerformanceTest.h
src/Graphics/: Graphics.h
src/InputHandler/: InputHandler.h
src/Objects/: Bullet.h  EmptyObject.h  Player.h
src/PerformanceMonitor/: PerformanceMonitor.h
src/Physics/: CollisionGrid.h  Grid.h  Physics.h  World.h
src/World/: AtomWorld.h  ComplexObject.h  Dumb.h  ExplosionHandler.h  Rocket.h  Shooter.h  VerletObject.h  VerletStick.h  World.h
src/addons/: Benchmark.h  Chain.h  ExplosionHandler.h  RandomSpawner.h  Shooter.h  Square.h
src/modules/: Angle.h  Graphics.h  Grid.h  Physics.h  Rand.h  Rectangle.h  ThreadPool.h  ThreadsTest.h  Vector.h  VerletObject.h  World.h  thread_pool.hpp
src/thrash/: stick.txt
src/utils/: Grid.h
